--- a/traversability_estimation_filters/package.xml
+++ b/traversability_estimation_filters/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="3">
   <name>traversability_estimation_filters</name>
   <version>0.4.0</version>
   <description>library for filtering elevation maps.</description>
@@ -9,17 +9,18 @@
   <url type="bugtracker">https://github.com/ethz-asl/traversability_estimation/issues</url>
   <author email="martiwer@student.ethz.ch">Martin Wermelinger</author>
   <author email="pfankhauser@anybotics.com">Peter Fankhauser</author>
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>cmake_modules</build_depend>
-  <build_depend>grid_map_core</build_depend>
-  <build_depend>grid_map_ros</build_depend>
-  <build_depend>grid_map_msgs</build_depend>
-  <build_depend>filters</build_depend>
-  <run_depend>grid_map_ros</run_depend>
-  <run_depend>grid_map_core</run_depend>
-  <run_depend>grid_map_msgs</run_depend>
-  <run_depend>filters</run_depend>
+
+  <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <depend>rclcpp</depend>
+  <depend>grid_map_core</depend>
+  <depend>grid_map_ros</depend>
+  <depend>grid_map_msgs</depend>
+  <depend>filters</depend>
+  <depend>pluginlib</depend>
+
   <export>
+    <build_type>ament_cmake</build_type>
     <filters plugin="${prefix}/filter_plugins.xml" />
   </export>
 </package>
